--- a/descendants.ipynb
+++ b/descendants.ipynb
@@ -134,10 +134,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 287,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(q - 1)^-1 * q"
+      ]
+     },
+     "execution_count": 287,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qiffy_frac(g1+g2)"
+   ]
   },
   {
    "cell_type": "code",
