the new good one agrees with the old!

--- a/descendants.ipynb
+++ b/descendants.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "e = SymmetricFunctions(Fqx).elementary()\n",
     "R.<G> = PolynomialRing(Fqx)\n",
-    "Weqx0 = (1-G)^N*Fqx(q) - G^N\n",
+    "Weqx0 = (1-G)^N*Fqx(\"q\") - G^N\n",
     "\n",
     "def qiffy_diff(f,dlist):\n",
     "    fcur = f\n",
@@ -61,7 +61,7 @@
     "        fcur = sum(( diff(fcur, g[i]) * dgdx(i) for i in rN )) + diff(fcur,xj)\n",
     "    fcur0 = fcur.subs({xi:0 for xi in xvars})\n",
     "    #print fcur\n",
-    "    #print fcur0\n",
+    "    print fcur0\n",
     "    return qiffy_frac(Frac(Rg)(fcur0))\n",
     "\n",
     "q=var(\"q\")\n",
@@ -80,7 +80,7 @@
     "\n",
     "def qiffy_poly(f):\n",
     "    fsym = e.from_polynomial(f).restrict_parts(N)\n",
-    "    \n",
+    "    print fsym\n",
     "    result = 0\n",
     "    for part, coef in fsym.monomial_coefficients().items():\n",
     "        part_result = 1\n",
@@ -94,16 +94,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1/2*g1^3/(g1*(q - 1) - q) - 1/2*g2^3/(g2*(q - 1) - q)\n",
+      "2*q*e[1, 1, 1] + (-6*q)*e[2, 1] + (-2*q+2)*e[2, 1, 1] + (4*q-4)*e[2, 2]\n",
+      "4*q^2*e[] + (-4*q^2+4*q)*e[1] + (4*q^2-8*q+4)*e[2]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "(-1/4) * (q - 1)^-4 * q * (17*q^2 - 24*q + 8)"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,6 +193,26 @@
     "print result\n",
     "ff=Frac(Rg)(result)\n",
     "qiffy_frac(ff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e[3].expand(2)"
    ]
   },
   {
