--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,16 +20,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.dec_series object at 0x6fcba4ddc90>"
+       "<__main__.dec_series object at 0x6fcba47d810>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,93 +80,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((-1/2)*g1^3)/((q - 1)*g1 - q)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D.Fg(\"(-1/2*g1^3/(g1*(q - 1) - q))\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(-1/2*g1^3/(g1*(q - 1) - q)) in D.Rg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(-1/2*g1^3/(g1*(q - 1) - q) ) in D.Rg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x\n",
-      "done\n",
-      "done with loop -g1^3/(3*g1^2*x + 2*g1*(q - 1) - 2*q) - g2^3/(3*g2^2*x + 2*g2*(q - 1) - 2*q)\n",
-      "done with subs -1/2*g1^3/(g1*(q - 1) - q) - 1/2*g2^3/(g2*(q - 1) - q)\n",
-      "entered qiffy\n",
-      "rate path\n",
-      "done coercing\n",
-      "HEY!\n",
-      "2*q*e[1, 1, 1] + (-6*q)*e[2, 1] + (-2*q+2)*e[2, 1, 1] + (4*q-4)*e[2, 2]\n",
-      "HEY!\n",
-      "4*q^2*e[] + (-4*q^2+4*q)*e[1] + (4*q^2-8*q+4)*e[2]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "(-1/4) * (q - 1)^-4 * q * (17*q^2 - 24*q + 8)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,32 +100,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1/32) * (q - 1)^-8 * q^2 * (1013*q^4 - 3522*q^3 + 4524*q^2 - 2544*q + 528)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Fg"
+    "D.qiffy_diff(g1+g2,[x,x])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'sage.symbolic.constants_c.E' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-37-b5d7358cd968>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0me\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexpand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mInteger\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'sage.symbolic.constants_c.E' object does not support indexing"
-     ]
+     "data": {
+      "text/plain": [
+       "(-3/256) * (q - 1)^-12 * q^2 * (41039*q^7 - 232786*q^6 + 553540*q^5 - 711456*q^4 + 529536*q^3 - 225248*q^2 + 49472*q - 4096)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "e[3].expand(3)"
+    "D.qiffy_diff(g1+g2,[x,x,x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext snakeviz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file u'/tmp/tmp5BnLwu'. \n",
+      "Embedding SnakeViz in the notebook...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-6959d3eb-41d6-11ea-a129-3faf899b2b2a' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>$(\"#snakeviz-6959d3eb-41d6-11ea-a129-3faf899b2b2a\").attr({src:\"http://\"+document.location.hostname+\":59675/snakeviz/%2Ftmp%2Ftmp5BnLwu\"})</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%snakeviz\n",
+    "D.qiffy_diff(g1+g2,[x,x,x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "*** Profile stats marshalled to file u'/tmp/tmpFdCntf'. \n",
+      "Embedding SnakeViz in the notebook...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<iframe id='snakeviz-09bb5035-41d7-11ea-909a-3faf899b2b2a' frameborder=0 seamless width='100%' height='1000'></iframe>\n",
+       "<script>$(\"#snakeviz-09bb5035-41d7-11ea-909a-3faf899b2b2a\").attr({src:\"http://\"+document.location.hostname+\":59712/snakeviz/%2Ftmp%2FtmpFdCntf\"})</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%snakeviz\n",
+    "D.qiffy_diff(g1+g2,[x,x,x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-3/256) * (q - 1)^-12 * q^2 * (41039*q^7 - 232786*q^6 + 553540*q^5 - 711456*q^4 + 529536*q^3 - 225248*q^2 + 49472*q - 4096)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.qiffy_diff(g1+g2,[x,x,x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(q - 1)^-1 * q"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.qiffy_frac(g1+g2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Symbolic Ring"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(g1+g2).parent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g1 + g2"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(g1+g2).numerator().pa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(q - 1)^-1 * q"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D.qiffy_poly(g1+g2)"
    ]
   },
   {
